Ajout du magasin, et tentative d'ajout d'une méthode pour ajouter des items au shop.json.